--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loading-skeleton": "^3.5.0",
     "react-quill-new": "^3.3.3",
     "react-router-dom": "^7.1.1"
   },
