--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^18.3.1",
     "react-loading-skeleton": "^3.5.0",
     "react-quill-new": "^3.3.3",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "react-top-loading-bar": "^3.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
