--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,8 @@
     "react-quill-new": "^3.3.3",
     "react-router-dom": "^7.1.1",
     "react-top-loading-bar": "^3.0.2",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
