--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "html-react-parser": "^5.2.2",
+    "lottie-react": "^2.4.1",
     "openai": "^4.78.1",
     "quill": "^2.0.3",
     "react": "^18.3.1",
