--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.9",
+    "canvas-confetti": "^1.9.3",
     "dotenv": "^16.4.7",
     "html-react-parser": "^5.2.2",
     "lottie-react": "^2.4.1",
