--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^7.1.1",
     "react-top-loading-bar": "^3.0.2",
     "react-transition-group": "^4.4.5",
+    "reactjs-popup": "^2.0.6",
     "validator": "^13.12.0"
   },
   "devDependencies": {
