feat: integrate Cloudinary for image uploads and add signature generation endpoint

--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,5 @@
 SECRET=ijelpxinldonskwoidnglsoe
+CLOUD_NAME=dviyjm1af
+CLOUD_API_KEY=953465259478889
+CLOUD_API_SECRET=v788Z-FMsVI1Z3kuMRMjMfJB8mY
+CLOUDINARY_URL=cloudinary://953465259478889:v788Z-FMsVI1Z3kuMRMjMfJB8mY@dviyjm1af
