--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-loading-skeleton": "^3.5.0",
     "react-quill-new": "^3.3.3",
     "react-router-dom": "^7.1.1",
